@@ -22,6 +22,7 @@ Version 0.2
 - added `import_string`.
 - added is_* properties to request objects
 - added `empty()` method to routing rules
+- added `werkzeug.contrib.profiler`
 
 
 Version 0.1
